# anton_gizmo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildf.bat
include/anton/gizmo/: arrow_3d.hpp  common.hpp
include/anton_gizmo/: arrow_3d.hpp  base_types.hpp  dial_3d.hpp  gizmo.hpp  utils.hpp
include/anton_math/: math.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  quaternion.hpp  transform.hpp  vector2.hpp  vector3.hpp  vector4.hpp
private/: arrow_3d.cpp  dial_3d.cpp  intersection_tests.hpp  manipulate.cpp  shapes.cpp  utils.hpp
public/anton/gizmo/: arrow_3d.hpp  common.hpp  dial_3d.hpp  gizmo.hpp  manipulate.hpp  shapes.hpp  spahes.hpp  utils.hpp
source/: arrow_3d.cpp  base_types.cpp  common.cpp  dial_3d.cpp  intersection_tests.hpp  intersections_common.hpp  utils.cpp
source/anton_math/: vector.cpp
